--- a/about.html
+++ b/about.html
@@ -11,7 +11,6 @@
     </head>
     <body class="new-rocker-regular">
         <div class="container">
-            <center>
             <header>About</header>
             <nav>x-----<a href="index.html">Main</a>-----<a href="blog.html">Blog</a>-----<a href="about.html">About</a>-----<a href="music.html">Music</a>-----x</nav>
             <main>
@@ -31,7 +30,9 @@
                 <p>If you want to talk to me, message me on tumblr or something. My tumblr is <a href="https://frankisnotademon.tumblr.com/">@frankisnotademon</a>.</p>
             </main>
             <footer>2025-until god smites me down</footer>
-            </center>
+            <div class="friends_box">
+                    <p>I don't really know anyone else who has a website, but one of my mutuals on tumblr is working on one, so Lee, once you finish yours, I can link it here so the zero people who look at website can look at yours too, if you want!</p>
+            </div>
         </div>
     </body>
 </html>
