--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     </head>
     <body class="new-rocker-regular">
         <div class="container">
-            <center>
             <header>Peter Pan's Bedroom</header>
             <nav>x-----<a href="index.html">Main</a>-----<a href="blog.html">Blog</a>-----<a href="about.html">About</a>-----<a href="music.html">Music</a>-----x</nav>
             <main>
@@ -25,7 +24,9 @@
                <p>Scar Tissue by Red Hot Chili Peppers</p>
             </main>
             <footer>2025-until god smites me down</footer>
-            </center>
+            <div class="webrings_box">
+                <p>If I was in any webrings they'd go</p>
+            </div>
         </div>
     </body>
 </html>
