--- a/music.html
+++ b/music.html
@@ -15,13 +15,21 @@
             <header>MUSICCCCCCC!</header>
             <nav>x-----<a href="index.html">Main</a>-----<a href="blog.html">Blog</a>-----<a href="about.html">About</a>-----<a href="music.html">Music</a>-----x</nav>
             <main>
-                <h2>AASDLKFJADSFLK LOOK ITS MUSIC I LOVE MUSIC</h2>
-                <h3>I'm Planning On Putting My Original Music Here Later But I Don't Have A Whole Lot Of That So Here's My Chemical Romance!</h3>
+                <h2>EVERYBODY I WRITE MUSIC AND YOU SHOULD LISTEN TO IT</h2>
+                <p>Because coding is hard, to close the lyrics, you have to reload the page :/</p>
+                <img src="download (1).jpg">
+                <h3>Friend Nico</h3>
                 <audio controls>
-                    <source src="PARTY POISON - MY CHEMICAL ROMANCE (Lyric Video).mp3">
+                    <source src="Friend_Nico.mp3">
                 </audio>
-                <p>Party Poison by My Chemical Romance</p>
-                <img src="download.gif">
+                <div></div>
+                <button onclick="friendNico()" class="button">Friend Nico Lyrics</button>
+                <p id="fnl"></p>
+                <script>
+                function friendNico(){
+                    document.getElementById("fnl").innerHTML = "<p>I'm just checking in</p><p>To make sure you're okay</p><p>I know I said a lot</p><p>Yesterday</p><p>A bee stung my neck</p><p>And it really hurts</p><p>And on top of that</p><p>I made everything worse</p><p>Friend Nico would you please pick up the phone</p><p>I've got something to tell you that you might already know</p><p>I did what you said, and I liked it</p><p>But they didn't and I kind of feel like shit</p><p>I fucked up</p><p>I fucked up pretty bad</p><p>I choked on</p><p>My favorite thing I had</p><p>It doesn't really matter if I show my scars</p><p>I got them</p><p>After it got hard</p><p>Friend Nico would you please pick up the phone</p><p>I've got something to tell you that you might already know</p><p>I did what you said, and I liked it</p><p>But they didn't and I kind of feel like shit</p><p>Friend Nico would you please pick up the phone</p><p>I've got something to tell you that you might already know</p><p>I did what you said and I liked it</p><p>But they didn't and I kind of feel like shit</p><p>I kind of feel like shit</p><p>I kind of feel like shit</p><p>Yeah I kind of feel like shit</p><p>Yeah I kind of, kind of, kind of feel like shit</p><hr>"
+                }
+                </script>
             </main>
             <footer>2025-until god smites me down</footer>
             </center>
