added transing the internet webring

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
             </main>
             <footer>2025-until god smites me down</footer>
             <div class="webrings_box">
-                <p>If I was in any webrings they'd go</p>
+                <h3>Webrings!!!</h3>
+                <script src="https://transring.neocities.org/ring.js"></script>
             </div>
         </div>
     </body>
