added pages i needed to add

--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
     <body class="new-rocker-regular">
         <div class="container">
             <header>About</header>
-            <nav>x-----<a href="index.html">Main</a>-----<a href="blog.html">Blog</a>-----<a href="about.html">About</a>-----<a href="music.html">Music</a>-----x</nav>
+            <nav>x-----<a href="index.html">Main</a>-----<a href="blog.html">Blog</a>-----<a href="about.html">About</a>-----<a href="music.html">Music</a>-----<a href="other.html">Other Stuff</a>-----x</nav>
             <main>
                 <h2>I'm Crazy And It's Important That You Know That</h2>
                 <img src="frank iero (1).jpg" class="smaller">
