--- a/blog.html
+++ b/blog.html
@@ -12,7 +12,7 @@
         <div class="container">
             <center>
             <header>Blog</header>
-            <nav>x-----<a href="index.html">Main</a>-----<a href="blog.html">Blog</a>-----<a href="about.html">About</a>-----<a href="music.html">Music</a>-----x</nav>
+            <nav>x-----<a href="index.html">Main</a>-----<a href="blog.html">Blog</a>-----<a href="about.html">About</a>-----<a href="music.html">Music</a>-----<a href="other.html">Other Stuff</a>-----x</nav>
             <main>
                 <h2>Welcome to My Padded Room!</h2>
                 <p>Yeah, so I'm gonna be honest, there's gonna be some seriously triggering shit in here and I'll put a trigger warning at the beginning of each entry and I might later add a way to filter the posts or something but I'm bad at coding so that probably won't happen for a while.</p>
