--- a/doodles.html
+++ b/doodles.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="styles.css">
-        <title>Peter Pan's Bedroom</title>
+        <title>Doodles</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=New+Rocker&display=swap" rel="stylesheet">
@@ -11,19 +11,18 @@
         <meta name="description" content="Personal website with a blog and music">
     </head>
     <body class="new-rocker-regular">
-        <div class="container">
-            <header>Peter Pan's Bedroom</header>
+        <div>
+            <header>xx-Doodlez-xx</header>
             <nav>x-----<a href="index.html">Main</a>-----<a href="blog.html">Blog</a>-----<a href="about.html">About</a>-----<a href="music.html">Music</a>-----<a href="other.html">Other Stuff</a>-----x</nav>
             <main>
-                <h2>Welcome to my website!</h2>
-                <p>I'm a mentally ill teenager who is interested in coding and I wanted to make a website where I post whatever I want whenever I want, and this is it. I have no clue how this will look on other devices, and honestly I'm a little scared to check, so if you're on your phone and this is shit, I'd say I'm sorry but I'm not actually.</p>
-                <img src="download.jpg">
+                <h2>Yeah so here's some doodles I do on my arms and I'm putting them here because my partner suggested it</h2>
+                <div class="row">
+                    <div class="column">
+                    <img src="image0 (6).jpeg" class="smaller"></img>
+                </div>
+                <p class="secret_text">So basically these are what I've started doing instead of cutting and I don't think Birdie has figured it out yet.</p>
             </main>
             <footer>2025-until god smites me down</footer>
-            <div class="webrings_box">
-                <h3>Webrings!!!</h3>
-                <script src="https://transring.neocities.org/ring.js"></script>
-            </div>
         </div>
     </body>
 </html>
