--- a/music.html
+++ b/music.html
@@ -13,7 +13,7 @@
         <div class="container">
             <center>
             <header>MUSICCCCCCC!</header>
-            <nav>x-----<a href="index.html">Main</a>-----<a href="blog.html">Blog</a>-----<a href="about.html">About</a>-----<a href="music.html">Music</a>-----x</nav>
+            <nav>x-----<a href="index.html">Main</a>-----<a href="blog.html">Blog</a>-----<a href="about.html">About</a>-----<a href="music.html">Music</a>-----<a href="other.html">Other Stuff</a>-----x</nav>
             <main>
                 <h2>EVERYBODY I WRITE MUSIC AND YOU SHOULD LISTEN TO IT</h2>
                 <p>Because coding is hard, to close the lyrics, you have to reload the page :/</p>
