--- a/other.html
+++ b/other.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="styles.css">
-        <title>Peter Pan's Bedroom</title>
+        <title>Other Stuff</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=New+Rocker&display=swap" rel="stylesheet">
@@ -12,17 +12,18 @@
     </head>
     <body class="new-rocker-regular">
         <div class="container">
-            <header>Peter Pan's Bedroom</header>
+            <header>Cool Things!</header>
             <nav>x-----<a href="index.html">Main</a>-----<a href="blog.html">Blog</a>-----<a href="about.html">About</a>-----<a href="music.html">Music</a>-----<a href="other.html">Other Stuff</a>-----x</nav>
             <main>
-                <h2>Welcome to my website!</h2>
-                <p>I'm a mentally ill teenager who is interested in coding and I wanted to make a website where I post whatever I want whenever I want, and this is it. I have no clue how this will look on other devices, and honestly I'm a little scared to check, so if you're on your phone and this is shit, I'd say I'm sorry but I'm not actually.</p>
-                <img src="download.jpg">
+                <h2>Here's Other Stuff That I Didn't Know Where To Put!</h2>
+                <hr>
+                <h3>Links To Other Pages</h3>
+                <p><a href="doodles.html">Doodles I Do On My Arms</a></p>
+                <hr>
+                <h3>Blinkies And The Like!</h3>
+                <p>No blinkies currently :(</p>
             </main>
             <footer>2025-until god smites me down</footer>
-            <div class="webrings_box">
-                <h3>Webrings!!!</h3>
-                <script src="https://transring.neocities.org/ring.js"></script>
             </div>
         </div>
     </body>
