added a little scrapbook thing uwu

--- a/other.html
+++ b/other.html
@@ -19,6 +19,7 @@
                 <hr>
                 <h3>Links To Other Pages</h3>
                 <p><a href="doodles.html">Doodles I Do On My Arms</a></p>
+                <p><a href="digitalscrapbook.html">My Digital Scrapbook!</a></p>
                 <hr>
                 <h3>Blinkies And The Like!</h3>
                 <p>No blinkies currently :(</p>
