fixed scrapbook stuff

--- a/digitalscrapbook.html
+++ b/digitalscrapbook.html
@@ -9,6 +9,7 @@
             <h1>Welcome To My Digital Scrapbook!</h1>
             <p>I've gotten into scrapbooking recently and I wanted to try to put a digital one on here so I can work on it when I don't have access to my supplies for my physical one!</p>
             <p>This is currently under construction, so don't judge too hard.</p>
+            <p><a href="index.html">Back to main</a></p>
             <div class = "page">
                 <p class="title">Why I Love Folk Punk</p>
                 <p>-The lyrics! They're painfully honest in a way that most music isn't.</p>
@@ -21,7 +22,6 @@
                 src="https://www.youtube.com/embed/n2I7JchMIVI">
                 </iframe>
                 <iframe width="420" height="315" src="https://www.youtube.com/embed/Iy5Oy41wVtY"></iframe>
-                <p>^I have no fucking clue why it's not working :P</p>
                 </div>
             </div>
         </div>
