--- a/other.html
+++ b/other.html
@@ -20,6 +20,7 @@
                 <h3>Links To Other Pages</h3>
                 <p><a href="doodles.html">Doodles I Do On My Arms</a></p>
                 <p><a href="digitalscrapbook.html">My Digital Scrapbook!</a></p>
+                <p><a href="https://bagel-offical.tumblr.com/">Abomination to God</a></p>
                 <hr>
                 <h3>Blinkies And The Like!</h3>
                 <p>No blinkies currently :(</p>
